added changes in the cors policy and generation of token in the headers in authentication